Stopped absoluting archive button on mobile

--- a/src/containers/Residents/SingleResidentContainer/SingleResidentComponent/SingleResidentComponent.scss
+++ b/src/containers/Residents/SingleResidentContainer/SingleResidentComponent/SingleResidentComponent.scss
@@ -328,7 +328,18 @@ $spanbg: rgba(72, 67, 73, 0.8);
           left: 0;
       }
       .pastshows-button {
-          bottom: 10px;
+          bottom: 0;
+          min-width: 0px;
+          max-width: 90px;
+          position: relative;
+          margin-top: 100px;
+
+
+          h1 {
+              font-size: 14px;
+              padding: 5px;
+
+          }
       }
   }
 
@@ -409,5 +420,11 @@ $spanbg: rgba(72, 67, 73, 0.8);
             span {}
         }
         .resident-show-display-description {}
+    }
+
+    .resident-show-pastshows-container {
+        .pastshows-button {
+            margin-top: 40px;
+        }
     }
 }
